@@ -45,14 +45,14 @@
 		<!-- ###SUB_REQUIRED_FIELD_password### -->
 		<p class="agency-error">###MISSING_PASSWORD###</p>
 		<!-- ###SUB_REQUIRED_FIELD_password### -->
-		<input id="agency-password" type="password" size="10" maxlength="40" title="###TOOLTIP_PASSWORD###" name="###NAME_PASSWORD###" value="" class="agency-password" />
+		<input type="password" name="###NAME_PASSWORD###" id="agency-password" class="agency-password" size="10" maxlength="40" title="###TOOLTIP_PASSWORD###" value="" />
 	</dd>
 
 	<dt>
 		<label for="agency-password_again" class="agency-password-again">###LABEL_PASSWORD_AGAIN### ###REQUIRED_PASSWORD###</label>
 	</dt>
 	<dd>
-		<input id="agency-password_again" type="password" size="10" maxlength="40" title="###LABEL_TOOLTIP_PASSWORD_AGAIN###" name="###NAME_PASSWORD_AGAIN###" value="" class="agency-password" />
+		<input type="password" name="###NAME_PASSWORD_AGAIN###" id="agency-password_again" class="agency-password" size="10" maxlength="40" title="###LABEL_TOOLTIP_PASSWORD_AGAIN###" value="" />
 	</dd>
 	<!-- ###SUB_INCLUDED_FIELD_password### -->
 
@@ -692,7 +692,7 @@
 
 	<dt>###LABEL_PASSWORD###</dt>
 	<dd>
-		<input id="agency-password" type="password" name="pass" class="agency-password" value="" size="10" maxlength="40" title="###TOOLTIP_PASSWORD###" />
+		<input type="password" name="pass" id="agency-password" class="agency-password" size="10" maxlength="40" title="###TOOLTIP_PASSWORD###" value="" />
 	</dd>
 
 	<dt>&nbsp;</dt>
@@ -1370,13 +1370,13 @@ The user is informed that a message has been sent to the email address and that 
 		<!-- ###SUB_REQUIRED_FIELD_password### -->
 		<p class="agency-error">###MISSING_PASSWORD###</p>
 		<!-- ###SUB_REQUIRED_FIELD_password### -->
-		<input id="agency-password" type="password" name="pass" class="agency-password" value="" size="10" maxlength="40" title="###TOOLTIP_PASSWORD###" />
+		<input type="password" name="pass" id="agency-password" class="agency-password" size="10" maxlength="40" title="###TOOLTIP_PASSWORD###" value="" />
 	</dd>
 	<dt>
 		<label for="agency-password_again">###LABEL_PASSWORD_AGAIN###</label>
 	</dt>
 	<dd>
-		<input id="agency-password_again" type="password" size="10" maxlength="40" title="###LABEL_TOOLTIP_PASSWORD_AGAIN###" name="###NAME_PASSWORD_AGAIN###" value="" class="agency-password" />
+		<input type="password" name="###NAME_PASSWORD_AGAIN###" id="agency-password_again" class="agency-password" size="10" maxlength="40" title="###LABEL_TOOLTIP_PASSWORD_AGAIN###" value="" />
 	</dd>
 	<!-- ###SUB_INCLUDED_FIELD_password### -->
 
@@ -2041,7 +2041,7 @@ The user is informed that a message has been sent to the email address and that 
 	<dt><label for="agency-username">###LABEL_USERNAME###</label></dt>
 	<dd> <input type="text" class="agency-text" id="agency-username" size="40" maxlength="50" title="###LABEL_TOOLTIP_LOGIN_USERNAME###" name="user" value="###FIELD_username###" /> </dd>
 	<dt><label for="agency-pass">###LABEL_PASSWORD###</label></dt>
-	<dd> <input type="password" id="agency-pass" title="###LABEL_TOOLTIP_LOGIN_PASSWORD###" name="pass" value="" size="10" maxlength="40" /> </dd>
+	<dd> <input type="password" name="pass" id="agency-password" class="agency-password" size="10"  maxlength="40" title="###LABEL_TOOLTIP_LOGIN_PASSWORD###" value="" /> </dd>
 
 	<dt>&nbsp;</dt>
 	<dd>
@@ -2095,7 +2095,7 @@ The user is informed that a message has been sent to the email address and that 
 	<dd><input type="text" class="agency-text" id="agency-username" size="40" maxlength="50" title="###LABEL_TOOLTIP_LOGIN_USERNAME###" name="user" value="###FIELD_username###" /></dd>
 
 	<dt><label for="agency-pass">###LABEL_PASSWORD###</label></dt>
-	<dd><input type="password" title="###LABEL_TOOLTIP_LOGIN_PASSWORD###" name="pass" value="" size="10" maxlength="40" /></dd>
+	<dd><input type="password" name="pass" id="agency-password" class="agency-password" size="10" maxlength="40" title="###LABEL_TOOLTIP_LOGIN_PASSWORD###" value="" /></dd>
 
 	<dt>&nbsp;</dt>
 	<dd>
@@ -2130,13 +2130,13 @@ The user is informed that a message has been sent to the email address and that 
 		<!-- ###SUB_REQUIRED_FIELD_password### -->
 		<p class="agency-error">###MISSING_PASSWORD###</p>
 		<!-- ###SUB_REQUIRED_FIELD_password### -->
-		<input id="agency-password" type="password" name="pass" class="agency-password" value="" size="10" maxlength="40" title="###TOOLTIP_PASSWORD###" />
+		<input type="password" name="pass" id="agency-password" class="agency-password" size="10" maxlength="40" title="###TOOLTIP_PASSWORD###" value="" />
 	</dd>
 	<dt>
 		<label for="agency-password_again" class="agency-password-again">###LABEL_PASSWORD_AGAIN###</label>
 	</dt>
 	<dd>
-		<input id="agency-password_again" type="password" size="10" maxlength="40" title="###LABEL_TOOLTIP_PASSWORD_AGAIN###" name="###NAME_PASSWORD_AGAIN###" value="" class="agency-password" />
+		<input type="password" name="###NAME_PASSWORD_AGAIN###" id="agency-password_again" class="agency-password" size="10" maxlength="40" title="###LABEL_TOOLTIP_PASSWORD_AGAIN###" value="" />
 	</dd>
 	<!-- ###SUB_INCLUDED_FIELD_password### -->
 
